--- a/index.html
+++ b/index.html
@@ -71,16 +71,19 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="header-inner">
-                        <!-- header inner -->
-                        <h1 class="title">Start organizing your trips with TafiPal</h1>
-                        <div class="btn-wrapper  desktop-left padding-top-30">
+                        <!-- header inner --> 
+
+                        <div class="rec" style="background-image:url(assets/img/bg/Rectangle.png);">
+                            <h1 class="title">Start organizing your trips with TafiPal</h1>
+                            <div class="btn-wrapper  desktop-left padding-top-30">
                             <a href="#" class="boxed-btn">Download app</a>
+                            </div>
                         </div>
                     </div>
                     <!-- //.header inner -->
                 </div>
             </div>
-        </div>
+        </div>    
     </div>
     
     <!-- Why Choose Us -->
