--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                     <div class="header-inner">
                         <!-- header inner --> 
 
-                        <div class="rec" style="background-image:url(assets/img/bg/Rectangle.png);">
+                        <div class="rec" >
+                            <img src="/assets/img/bg/Rectangle1.png" alt="" class="phone-booking"> 
                             <h1 class="title">Start organizing your trips with TafiPal</h1>
                             <div class="btn-wrapper  desktop-left padding-top-30">
                             <a href="#" class="boxed-btn">Download app</a>
